--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.35.0",
     "webpack-dev-server": "^3.7.2"
   },
