--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "webpack-dev-server": "^3.7.2"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "webpack-cli": "^3.3.5"
   }
 }
