--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.0.0",
+    "style-loader": "^0.23.1",
     "webpack-cli": "^3.3.5"
   }
 }
