--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "vanillaweb",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack --config webpack.config.js",
     "start": "webpack-dev-server --config webpack.config.js"
   },
@@ -20,6 +20,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.0.0",
     "dotenv-webpack": "^1.7.0",
+    "jest": "^24.8.0",
     "style-loader": "^0.23.1",
     "webpack-cli": "^3.3.5"
   }
